--- a/README.mkd
+++ b/README.mkd
@@ -3,3 +3,7 @@
 To make it simple, I did not use `.cls`. But I do use `bibentry` to manage papers (however, I do not have much yet). I am going to apply for PhD later and I think a good CV is a plus. If there are any problems, feel free to open an issue or make a pull request (PR).
 
 Good luck!
+
+---
+
+The example pdf is [cv](cv.pdf). And you can quickly make the pdf by typing `make pdf` into command line.
