fix text size problem & add make clean method

--- a/cv.tex
+++ b/cv.tex
@@ -45,7 +45,7 @@
 
 \section*{\centering\underline{EDUCATION}}
 \begin{itemize}[noitemsep, nolistsep]
-    \item[2020] \large\textbf{Xi'an Jiaotong-Liverpool University} \hfill Suzhou, China
+    \large \item[2020] \textbf{Xi'an Jiaotong-Liverpool University} \hfill Suzhou, China
         \begin{itemize}
             \item[] \textit{Bachelor of Science in Information and Computing Sciences}
         \end{itemize} 
