minor update on date format

--- a/cv.tex
+++ b/cv.tex
@@ -121,18 +121,18 @@
 
 \section*{\centering\underline{HONORS \& AWARDS}}
 \begin{itemize}[noitemsep, nolistsep]
-    \item[2018] Sep \textbf{CNCF Diversity Scholarship}
-    \item[\phantom{2018}] Sep \textbf{Special Prize (US\$10,000) by QTUM, Wangxiang Blockchain Hackathon} \href{https://github.com/PRIEWIENV/QtumSwap}{\textcolor{blue}{[Source Code]}}
+    \item[2018.09]\textbf{CNCF Diversity Scholarship}
+    \item[2018.09]\textbf{Special Prize (US\$10,000) by QTUM, Wangxiang Blockchain Hackathon} \href{https://github.com/PRIEWIENV/QtumSwap}{\textcolor{blue}{[Source Code]}}
         \begin{itemize}[noitemsep, nolistsep]
             \item Awarded to only 1 of more than 20 groups all over the world. 
             \item Implemented atomic swaps between BTC/ERC20/any contract call and QTUM.
         \end{itemize} 
-    \item[\phantom{2018}] Jul \textbf{1st Prize, EOS Hackathon Hangzhou (Team)} \href{https://github.com/Acappella-dream}{\textcolor{blue}{[Projects]}}
-    \item[\phantom{2018}] Jul \textbf{3rd Prize, EOS Hackathon Hangzhou (Personal)}
-    \item[\phantom{2018}] Jul \textbf{3rd Prize, DoraHacks x BCH Faith Hack}
-    \item[\phantom{2018}] Jun \textbf{2nd Prize, XJTLU \& PNP AI Innovation Hackathon}
-    \item[\phantom{2018}] Apr \textbf{IBM Student Innovation Lab Program Award}
-    \item[2017] Nov \textbf{1st Prize, Hack x FDU Hackathon} \href{https://github.com/dexhunter/hackxfdu-DSharing}{\textcolor{blue}{[Source Code]}}
+    \item[2018.07]\textbf{1st Prize, 2018 EOS Hackathon Hangzhou (Team)} \href{https://github.com/Acappella-dream}{\textcolor{blue}{[Projects]}}
+    \item[2018.07]\textbf{3rd Prize, 2018 EOS Hackathon Hangzhou (Personal)}
+    \item[2018.07]\textbf{3rd Prize, DoraHacks x BCH Faith Hack}
+    \item[2018.06]\textbf{2nd Prize, 2018 XJTLU \& PNP AI Innovation Hackathon}
+    \item[2018.04]\textbf{2017 IBM Student Innovation Lab Program Award}
+    \item[2017.11]\textbf{1st Prize, Hack x FDU 2017 Hackathon} \href{https://github.com/dexhunter/hackxfdu-DSharing}{\textcolor{blue}{[Source Code]}}
         \begin{itemize}[noitemsep, nolistsep]
             \item Awarded to the top 1 of more than 70 groups from colleges nationwide.
             \item Built a decentralized P2P leasing system using blockchain. 
