--- a/cv.tex
+++ b/cv.tex
@@ -45,11 +45,11 @@
 
 \section*{\centering\underline{EDUCATION}}
 \begin{itemize}[noitemsep, nolistsep]
-    \large \item[2020] \textbf{Xi'an Jiaotong-Liverpool University} \hfill Suzhou, China
+    \large \item[2020] \textbf{University of Liverpool} \hfill Suzhou, China
         \begin{itemize}
             \item[] \textit{Bachelor of Science in Information and Computing Sciences}
         \end{itemize} 
-    \item[2020] \large\textbf{University of Liverpool} \hfill Liverpool, UK
+    \item[2020] \large\textbf{Xi'an Jiaotong-Liverpool University} \hfill Liverpool, UK
         \begin{itemize}
             \item[] \textit{Bachelor of Science in Information and Computing Sciences}
         \end{itemize} 
@@ -57,40 +57,45 @@
 
 \section*{\centering\underline{WORK EXPERIENCE}}
 \subsection*{\centering{Academia}}
-\begin{itemize}[leftmargin=0em]
+\begin{itemize}[leftmargin=0em, noitemsep, nolistsep]
     \setlength\itemsep{1em}
-    \item[] \large\textbf{\href{}{Zhejiang University}} \hfill Hangzhou, Zhejiang, China
+    \item[] \large\textbf{Zhejiang University} \hfill Hangzhou, Zhejiang, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] \large\textit{Visiting Student Researcher} \hfill 2019.09-2020.03
+            \item[] {Visiting Student Researcher} \hfill 2019.09-2020.03
              \begin{itemize}
-                \item[--] Under supervision of Prof. Peng Cheng 
-                \item[--] Research on machine learning, security
+                \small
+                \item[--] Under supervision of Prof. Peng Cheng .
+                \item[--] Research on machine learning, security.
              \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{Nanyang Technological University} \hfill Singapore
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] \large\textit{Research Assistant} \hfill 2019.03-2019.08
+            \item[] Research Assistant \hfill 2019.03-2019.08
              \begin{itemize}
-                \item[--] Under supervision of Prof. Rui Tan
-                \item[--] Research on collaborative learning, Internet of Things (IoT), Privacy
+                \small
+                \item[--] Under supervision of Prof. Rui Tan.
+                \item[--] Research on collaborative learning, Internet of Things (IoT), Privacy.
              \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{Xi'an Jiaotong-Liverpool University} \hfill Suzhou, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] \large\emph{Research Assistant} \hfill 2016.11-2018.08
+            \item[] Research Assistant \hfill 2016.11-2018.08
              \begin{itemize}
-                \item[--] Worked with Dr. Jinjun Liang on Portfolio Management
+                \small
+                \item[--] Worked with Dr. Jinjun Liang on Portfolio Management.
              \end{itemize}
-            \item[] \large\emph{Summer Undergraduate Research Fellow} \hfill 2017.06-2017.08
+            \item[] Summer Undergraduate Research Fellow \hfill 2017.06-2017.08
              \begin{itemize}
-                \item[--] Worked with Prof. Steven Guan on Style Transfer Learning
+                \small
+                \item[--] Worked with Prof. Steven Guan on Style Transfer Learning with Generative Adversarial Networks.
              \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{National University of Singapore} \hfill Singapore
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] \large\emph{Summer Internship} \hfill 2016.06-2016.08
+            \item[] Summer Internship \hfill 2016.06-2016.08
             \begin{itemize}
-                \item[--] Worked with Prof. Hon Wei Leong on course Computational Thinking and Community Detection in Large Graphs
+                \small
+                \item[--] Worked with Prof. Hon Wei Leong on course Computational Thinking and Community Detection in Large Graphs.
             \end{itemize}
         \end{itemize} 
 \end{itemize}
@@ -99,20 +104,22 @@
     \setlength\itemsep{1em}
     \item[] \large\textbf{Hyperledger (Linux Foundation)} \hfill Remote
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] \large\emph{Maintainer of fabric-sdk-py} \hfill 2018.09-Present
+            \item[] Maintainer of fabric-sdk-py \hfill 2018.09-Present
              \begin{itemize}
-                \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
+                \small
+                \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}.
              \end{itemize}
-            \item[] \large\emph{Blockchain Engineer Intern} \hfill 2018.06-2018.11
+            \item[] Blockchain Engineer Intern \hfill 2018.06-2018.11
              \begin{itemize}
-                \item[--] Part-time intern for Hyperledger Fabric Python SDK.
-                \item[--] Details at \href{https://wiki.hyperledger.org/internship/project_ideas}{\textcolor{blue}{[Project website]}}.
+                \small
+                \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project}}
              \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{Research Institute of Beihang University} \hfill Suzhou, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] \large\emph{Software Developer Intern} \hfill 2018.11-2019.06
+            \item[] Software Developer Intern \hfill 2018.11-2019.06
              \begin{itemize}
+                \small
                 \item[--] Develop an application based on Hyperledger Fabric.
                 \item[--] Develop a course about blockchain for undergraduates.
              \end{itemize}
@@ -124,6 +131,7 @@
     \item[2018.09]\textbf{CNCF Diversity Scholarship}
     \item[2018.09]\textbf{Special Prize (US\$10,000) by QTUM, Wangxiang Blockchain Hackathon} \href{https://github.com/PRIEWIENV/QtumSwap}{\textcolor{blue}{[Source Code]}}
         \begin{itemize}[noitemsep, nolistsep]
+            \small
             \item Awarded to only 1 of more than 20 groups all over the world. 
             \item Implemented atomic swaps between BTC/ERC20/any contract call and QTUM.
         \end{itemize} 
@@ -134,6 +142,7 @@
     \item[2018.04]\textbf{2017 IBM Student Innovation Lab Program Award}
     \item[2017.11]\textbf{1st Prize, Hack x FDU 2017 Hackathon} \href{https://github.com/dexhunter/hackxfdu-DSharing}{\textcolor{blue}{[Source Code]}}
         \begin{itemize}[noitemsep, nolistsep]
+            \small
             \item Awarded to the top 1 of more than 70 groups from colleges nationwide.
             \item Built a decentralized P2P leasing system using blockchain. 
         \end{itemize} 
