--- a/cv.tex
+++ b/cv.tex
@@ -46,11 +46,11 @@
 \section*{\centering\underline{EDUCATION}}
 \begin{itemize}[noitemsep, nolistsep]
     \large \item[2020] \textbf{University of Liverpool} \hfill Suzhou, China
-        \begin{itemize}
+        \begin{itemize}[noitemsep, nolistsep]
             \item[] \textit{Bachelor of Science in Information and Computing Sciences}
         \end{itemize} 
     \item[2020] \large\textbf{Xi'an Jiaotong-Liverpool University} \hfill Liverpool, UK
-        \begin{itemize}
+        \begin{itemize}[noitemsep, nolistsep]
             \item[] \textit{Bachelor of Science in Information and Computing Sciences}
         \end{itemize} 
 \end{itemize}
@@ -64,7 +64,7 @@
             \item[] {Visiting Student Researcher} \hfill 2019.09-2020.03
              \begin{itemize}
                 \small
-                \item[--] Under supervision of Prof. Peng Cheng .
+                \item[--] Under supervision of Prof. Peng Cheng.
                 \item[--] Research on machine learning, security.
              \end{itemize}
         \end{itemize} 
@@ -100,19 +100,19 @@
         \end{itemize} 
 \end{itemize}
 \subsection*{\centering{Industry}}
-\begin{itemize}[leftmargin=0em]
+\begin{itemize}[leftmargin=0em, noitemsep, nolistsep]
     \setlength\itemsep{1em}
     \item[] \large\textbf{Hyperledger (Linux Foundation)} \hfill Remote
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] Maintainer of fabric-sdk-py \hfill 2018.09-Present
+            \item[] Software Maintainer \hfill 2018.09-Present
              \begin{itemize}
                 \small
-                \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}.
+                \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
              \end{itemize}
             \item[] Blockchain Engineer Intern \hfill 2018.06-2018.11
              \begin{itemize}
                 \small
-                \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project}}
+                \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
              \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{Research Institute of Beihang University} \hfill Suzhou, China
@@ -135,7 +135,7 @@
             \item Awarded to only 1 of more than 20 groups all over the world. 
             \item Implemented atomic swaps between BTC/ERC20/any contract call and QTUM.
         \end{itemize} 
-    \item[2018.07]\textbf{1st Prize, 2018 EOS Hackathon Hangzhou (Team)} \href{https://github.com/Acappella-dream}{\textcolor{blue}{[Projects]}}
+    \item[2018.07]\textbf{1st Prize, 2018 EOS Hackathon Hangzhou (Team)} \href{https://github.com/Acappella-dream}{\textcolor{blue}{[Source Code]}}
     \item[2018.07]\textbf{3rd Prize, 2018 EOS Hackathon Hangzhou (Personal)}
     \item[2018.07]\textbf{3rd Prize, DoraHacks x BCH Faith Hack}
     \item[2018.06]\textbf{2nd Prize, 2018 XJTLU \& PNP AI Innovation Hackathon}
