add url for profs & update make clean

--- a/cv.tex
+++ b/cv.tex
@@ -64,8 +64,7 @@
             \item[] {Visiting Student Researcher} \hfill 2019.09-2020.03
              \begin{itemize}
                 \small
-                \item[--] Under supervision of Prof. Peng Cheng.
-                \item[--] Research on machine learning, security.
+                \item[--] Worked with \href{https://person.zju.edu.cn/en/cp}{Prof. Peng Cheng} on machine learning and security.
              \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{Nanyang Technological University} \hfill Singapore
@@ -73,8 +72,7 @@
             \item[] Research Assistant \hfill 2019.03-2019.08
              \begin{itemize}
                 \small
-                \item[--] Under supervision of Prof. Rui Tan.
-                \item[--] Research on collaborative learning, Internet of Things (IoT), Privacy.
+                \item[--] Worked with \href{https://www.ntu.edu.sg/home/tanrui/}{Prof. Rui Tan} on collaborative learning, Internet of Things (IoT) and Privacy.
              \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{Xi'an Jiaotong-Liverpool University} \hfill Suzhou, China
@@ -82,12 +80,12 @@
             \item[] Research Assistant \hfill 2016.11-2018.08
              \begin{itemize}
                 \small
-                \item[--] Worked with Dr. Jinjun Liang on Portfolio Management.
+                \item[--] Worked with \href{https://www.linkedin.com/in/kumkee}{Dr. Jinjun Liang} on Portfolio Management.
              \end{itemize}
             \item[] Summer Undergraduate Research Fellow \hfill 2017.06-2017.08
              \begin{itemize}
                 \small
-                \item[--] Worked with Prof. Steven Guan on Style Transfer Learning with Generative Adversarial Networks.
+                \item[--] Worked with \href{https://www.xjtlu.edu.cn/en/departments/academic-departments/computer-science-and-software-engineering/staff/steven-guan}{Prof. Steven Guan} on Style Transfer Learning with Generative Adversarial Networks.
              \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{National University of Singapore} \hfill Singapore
@@ -95,7 +93,7 @@
             \item[] Summer Internship \hfill 2016.06-2016.08
             \begin{itemize}
                 \small
-                \item[--] Worked with Prof. Hon Wei Leong on course Computational Thinking and Community Detection in Large Graphs.
+                \item[--] Worked with \href{https://www.comp.nus.edu.sg/~leonghw/}{Prof. Hon Wei Leong} on course Computational Thinking and Community Detection in Large Graphs.
             \end{itemize}
         \end{itemize} 
 \end{itemize}
@@ -113,6 +111,7 @@
              \begin{itemize}
                 \small
                 \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
+                \item[--] Worked with \href{https://yeasy.github.io/}{Dr. Baohua Yang}
              \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{Research Institute of Beihang University} \hfill Suzhou, China
