--- a/cv.tex
+++ b/cv.tex
@@ -159,6 +159,7 @@
 \section*{\centering\underline{MANUSCRIPTS}}
 \begin{itemize}
     \item[2017] \bibentry{jiang2017deep}
+    \item[2019] \bibentry{xu2019lightweight}
 \end{itemize}
 
 \end{document}
