--- a/ref.bib
+++ b/ref.bib
@@ -13,3 +13,10 @@
   year={2019},
   organization={ACM}
 }
+
+@article{xu2019lightweight,
+  title={Lightweight and Unobtrusive Privacy Preservation for Remote Inference via Edge Data Obfuscation},
+  author={\textbf{Xu}, \textbf{Dixing} and Zheng, Mengyao and Jiang, Linshan and Gu, Chaojie and Tan, Rui and Cheng, Peng},
+  journal={arXiv preprint arXiv:1912.09859},
+  year={2019}
+}
