--- a/cv.tex
+++ b/cv.tex
@@ -59,7 +59,7 @@
 \subsection*{\centering{Academia}}
 \begin{itemize}[leftmargin=0em, noitemsep, nolistsep]
     \setlength\itemsep{1em}
-    \item[] \large\textbf{Zhejiang University} \hfill Hangzhou, Zhejiang, China
+    \item[] \large\textbf{Zhejiang University} \hfill Hangzhou, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
             \item[] {Visiting Student Researcher} \hfill 2019.09-2020.03
              \begin{itemize}
@@ -100,35 +100,39 @@
 \subsection*{\centering{Industry}}
 \begin{itemize}[leftmargin=0em, noitemsep, nolistsep]
     \setlength\itemsep{1em}
-    \item[] \large\textbf{Hyperledger (Linux Foundation)} \hfill Remote
+    \item[] \large\textbf{Hyperledger} \hfill Remote
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] Software Maintainer \hfill 2018.09-Present
+            \item[] Software Development Engineer\hfill 2018.09-Present
              \begin{itemize}
                 \small
                 \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
              \end{itemize}
-            \item[] Blockchain Engineer Intern \hfill 2018.06-2018.11
-             \begin{itemize}
-                \small
-                \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
-                \item[--] Worked with \href{https://yeasy.github.io/}{Dr. Baohua Yang}
-             \end{itemize}
         \end{itemize} 
     \item[] \large\textbf{Research Institute of Beihang University} \hfill Suzhou, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] Software Developer Intern \hfill 2018.11-2019.06
+            \item[] Software Development Engineer Internship\hfill 2018.11-2019.06
              \begin{itemize}
                 \small
                 \item[--] Develop an application based on Hyperledger Fabric.
                 \item[--] Develop a course about blockchain for undergraduates.
              \end{itemize}
-        \end{itemize} 
+        \end{itemize}
+    \item[] \large\textbf{The Linux Foundation} \hfill Remote
+        \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
+            \item[] Blockchain Development Engineer Internship\hfill 2018.06-2018.11
+             \begin{itemize}
+                \small
+                \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
+                \item[--] Worked with \href{https://yeasy.github.io/}{Dr. Baohua Yang}
+             \end{itemize}
+        \end{itemize}
 \end{itemize}
 
 \section*{\centering\underline{HONORS \& AWARDS}}
 \begin{itemize}[noitemsep, nolistsep]
+    \item[2019.12]\textbf{Hyperledger Diversity Scholarship}
     \item[2018.09]\textbf{CNCF Diversity Scholarship}
-    \item[2018.09]\textbf{Special Prize (US\$10,000) by QTUM, Wangxiang Blockchain Hackathon} \href{https://github.com/PRIEWIENV/QtumSwap}{\textcolor{blue}{[Source Code]}}
+    \item[2018.09]\textbf{Special Prize (US\$10,000) by QTUM, Wanxiang Blockchain Hackathon} \href{https://github.com/PRIEWIENV/QtumSwap}{\textcolor{blue}{[Source Code]}}
         \begin{itemize}[noitemsep, nolistsep]
             \small
             \item Awarded to only 1 of more than 20 groups all over the world. 
