--- a/cv.tex
+++ b/cv.tex
@@ -102,7 +102,7 @@
     \setlength\itemsep{1em}
     \item[] \large\textbf{Hyperledger} \hfill Remote
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] Software Development Engineer\hfill 2018.09-Present
+            \item[] Software Maintainer\hfill 2018.09-Present
              \begin{itemize}
                 \small
                 \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
@@ -119,7 +119,7 @@
         \end{itemize}
     \item[] \large\textbf{The Linux Foundation} \hfill Remote
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] Blockchain Development Engineer Internship\hfill 2018.06-2018.11
+            \item[] Software Development Engineer (Blockchain) Internship\hfill 2018.06-2018.11
              \begin{itemize}
                 \small
                 \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
