update cv: add media coverage

--- a/cv.tex
+++ b/cv.tex
@@ -80,7 +80,7 @@
             \item[] Research Assistant \hfill 2016.11-2018.08
              \begin{itemize}
                 \small
-                \item[--] Worked with \href{https://www.linkedin.com/in/kumkee}{Dr. Jinjun Liang} on Portfolio Management.
+                \item[--] Worked with \href{https://www.linkedin.com/in/kumkee}{Dr. Jinjun Liang} on Portfolio Management. \href{https://archive.is/XKqY3}{\textcolor{blue}{[Media(CN)]}}
              \end{itemize}
             \item[] Summer Undergraduate Research Fellow \hfill 2017.06-2017.08
              \begin{itemize}
@@ -123,7 +123,7 @@
              \begin{itemize}
                 \small
                 \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
-                \item[--] Worked with \href{https://yeasy.github.io/}{Dr. Baohua Yang}
+                \item[--] Worked with \href{https://yeasy.github.io/}{Dr. Baohua Yang}. \href{https://www.hyperledger.org/blog/2018/06/13/meet-the-hyperledger-summer-2018-interns-part-2}{\textcolor{blue}{[Media(EN)]}} \href{https://archive.is/5nyBm}{\textcolor{blue}{[Media(CN)]}}
              \end{itemize}
         \end{itemize}
 \end{itemize}
@@ -146,7 +146,7 @@
     \item[2017.11]\textbf{1st Prize, Hack x FDU 2017 Hackathon} \href{https://github.com/dexhunter/hackxfdu-DSharing}{\textcolor{blue}{[Source Code]}}
         \begin{itemize}[noitemsep, nolistsep]
             \small
-            \item Awarded to the top 1 of more than 70 groups from colleges nationwide.
+            \item Awarded to the top 1 of more than 70 groups from colleges nationwide. \href{https://archive.is/FzYVh}{\textcolor{blue}{[Media(CN)]}}
             \item Built a decentralized P2P leasing system using blockchain. 
         \end{itemize} 
 \end{itemize}
