add section services

--- a/cv.tex
+++ b/cv.tex
@@ -30,7 +30,7 @@
 
 
 \begin{minipage}[t]{0.65\textwidth}
-    {\Huge Dixing \bf{XU}} \\
+    {\Huge Dixing \textbf{XU}} \\
     Visiting Student Researcher \\
     Zhejiang University\\
 \end{minipage}
@@ -164,6 +164,15 @@
 \begin{itemize}
     \item[2017] \bibentry{jiang2017deep}
     \item[2019] \bibentry{xu2019lightweight}
+\end{itemize}
+
+\section*{\centering\underline{SERVICES}}
+\begin{itemize}
+    \item[] \textbf{Student Member}, IEEE Computer Society (IEEE)
+    \item[] \textbf{Reviewer}:
+        \begin{itemize}[noitemsep, nolistsep]
+            \item[$\circ$] IEEE Internet of Things Journal (IF=9.515)
+        \end{itemize}
 \end{itemize}
 
 \end{document}
