--- a/cv.tex
+++ b/cv.tex
@@ -102,6 +102,11 @@
     \setlength\itemsep{1em}
     \item[] \large\textbf{Hyperledger} \hfill Remote
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
+            \item[] Mentor \hfill 2020.03-Present
+            \begin{itemize}
+                \small
+                \item[--] Mentor for \textit{Add interactive examples to Fabric Python SDK} \href{https://wiki.hyperledger.org/pages/viewpage.action?pageId=29035315}{\textcolor{blue}{[Project]}}
+            \end{itemize}
             \item[] Software Maintainer\hfill 2018.09-Present
              \begin{itemize}
                 \small
@@ -159,11 +164,11 @@
 % \subsection*{\centering{Conference}}
 \begin{itemize}
     \item[2019] \bibentry{zheng2019challenges}
+    \item[2020] \bibentry{xu2019lightweight}
 \end{itemize}
 \section*{\centering\underline{MANUSCRIPTS}}
 \begin{itemize}
     \item[2017] \bibentry{jiang2017deep}
-    \item[2019] \bibentry{xu2019lightweight}
 \end{itemize}
 
 \section*{\centering\underline{SERVICES}}
