--- a/ref.bib
+++ b/ref.bib
@@ -2,7 +2,8 @@
   title={A deep reinforcement learning framework for the financial portfolio management problem},
   author={Jiang, Zhengyao and \textbf{Xu}, \textbf{Dixing} and Liang, Jinjun},
   journal={arXiv preprint arXiv:1706.10059},
-  year={2017}
+  year={2017},
+  note={\textit{(citation over 50)}}
 }
 
 @inproceedings{zheng2019challenges,
@@ -17,6 +18,7 @@
 @article{xu2019lightweight,
   title={Lightweight and Unobtrusive Privacy Preservation for Remote Inference via Edge Data Obfuscation},
   author={\textbf{Xu}, \textbf{Dixing} and Zheng, Mengyao and Jiang, Linshan and Gu, Chaojie and Tan, Rui and Cheng, Peng},
-  journal={arXiv preprint arXiv:1912.09859},
-  year={2019}
+  journal={IEEE Internet of Thins Journal},
+  year={2020},
+  note={\textit{(forthcoming)}}
 }
