--- a/ref.bib
+++ b/ref.bib
@@ -18,7 +18,7 @@
 @article{xu2019lightweight,
   title={Lightweight and Unobtrusive Privacy Preservation for Remote Inference via Edge Data Obfuscation},
   author={\textbf{Xu}, \textbf{Dixing} and Zheng, Mengyao and Jiang, Linshan and Gu, Chaojie and Tan, Rui and Cheng, Peng},
-  journal={IEEE Internet of Things Journal},
+  journal={IEEE Internet of Things Journal, Special Issue on Artificial Intelligence Powered Edge Computing for Internet of Things},
   year={2020},
   note={\textit{(forthcoming)}}
 }
