update before graduation

--- a/cv.tex
+++ b/cv.tex
@@ -30,9 +30,10 @@
 
 
 \begin{minipage}[t]{0.65\textwidth}
-    {\Huge Dixing \textbf{XU}} \\
-    Visiting Student Researcher \\
-    Zhejiang University\\
+    {\Huge Dixing \textbf{XU}}
+    % {\Huge Dixing \textbf{XU}} \\
+    % Visiting Student Researcher \\
+    % Zhejiang University\\
 \end{minipage}
 \begin{minipage}[t]{0.45\textwidth}
     {\small\raggedright
@@ -100,6 +101,21 @@
 \subsection*{\centering{Industry}}
 \begin{itemize}[leftmargin=0em, noitemsep, nolistsep]
     \setlength\itemsep{1em}
+    \item[] \large\textbf{The Linux Foundation} \hfill Remote
+        \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
+            \item[] Software Development Engineer (Blockchain) Internship\hfill 2020.06-2020.12
+            \begin{itemize}
+                \small
+                \item[--] Part-time intern for Hyperledger Cello. \href{https://github.com/hyperledger/cello}{\textcolor{blue}{[Project]}}
+            \end{itemize}
+            \item[] Software Development Engineer (Blockchain) Internship\hfill 2018.06-2018.11
+             \begin{itemize}
+                \small
+                \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
+                \item[--] Worked with \href{https://yeasy.github.io/}{Dr. Baohua Yang}. \href{https://www.hyperledger.org/blog/2018/06/13/meet-the-hyperledger-summer-2018-interns-part-2}{\textcolor{blue}{[Media(EN)]}} \href{https://archive.is/5nyBm}{\textcolor{blue}{[Media(CN)]}}
+             \end{itemize}
+        \end{itemize}
+
     \item[] \large\textbf{Hyperledger} \hfill Remote
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
             \item[] Mentor \hfill 2020.03-Present
@@ -113,6 +129,7 @@
                 \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
              \end{itemize}
         \end{itemize} 
+
     \item[] \large\textbf{Research Institute of Beihang University} \hfill Suzhou, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
             \item[] Software Development Engineer Internship\hfill 2018.11-2019.06
@@ -120,15 +137,6 @@
                 \small
                 \item[--] Develop an application based on Hyperledger Fabric.
                 \item[--] Develop a course about blockchain for undergraduates.
-             \end{itemize}
-        \end{itemize}
-    \item[] \large\textbf{The Linux Foundation} \hfill Remote
-        \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] Software Development Engineer (Blockchain) Internship\hfill 2018.06-2018.11
-             \begin{itemize}
-                \small
-                \item[--] Part-time intern for Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
-                \item[--] Worked with \href{https://yeasy.github.io/}{Dr. Baohua Yang}. \href{https://www.hyperledger.org/blog/2018/06/13/meet-the-hyperledger-summer-2018-interns-part-2}{\textcolor{blue}{[Media(EN)]}} \href{https://archive.is/5nyBm}{\textcolor{blue}{[Media(CN)]}}
              \end{itemize}
         \end{itemize}
 \end{itemize}
@@ -164,7 +172,7 @@
 % \subsection*{\centering{Conference}}
 \begin{itemize}
     \item[2019] \bibentry{zheng2019challenges}
-    \item[2020] \bibentry{xu2019lightweight}
+    \item[2020] \bibentry{xu2020lightweight}
 \end{itemize}
 \section*{\centering\underline{MANUSCRIPTS}}
 \begin{itemize}
@@ -176,7 +184,7 @@
     \item[] \textbf{Student Member}, IEEE Computer Society (IEEE)
     \item[] \textbf{Reviewer}:
         \begin{itemize}[noitemsep, nolistsep]
-            \item[$\circ$] IEEE Internet of Things Journal (IF=9.515)
+            \item[$\circ$] IEEE Internet of Things Journal
         \end{itemize}
 \end{itemize}
 
