--- a/ref.bib
+++ b/ref.bib
@@ -2,8 +2,7 @@
   title={A deep reinforcement learning framework for the financial portfolio management problem},
   author={Jiang, Zhengyao and \textbf{Xu}, \textbf{Dixing} and Liang, Jinjun},
   journal={arXiv preprint arXiv:1706.10059},
-  year={2017},
-  note={\textit{(citation over 50)}}
+  year={2017}
 }
 
 @inproceedings{zheng2019challenges,
@@ -15,10 +14,10 @@
   organization={ACM}
 }
 
-@article{xu2019lightweight,
-  title={Lightweight and Unobtrusive Privacy Preservation for Remote Inference via Edge Data Obfuscation},
+@article{xu2020lightweight,
+  title={Lightweight and Unobtrusive Data Obfuscation at IoT Edge for Remote Inference},
   author={\textbf{Xu}, \textbf{Dixing} and Zheng, Mengyao and Jiang, Linshan and Gu, Chaojie and Tan, Rui and Cheng, Peng},
-  journal={IEEE Internet of Things Journal, Special Issue on Artificial Intelligence Powered Edge Computing for Internet of Things},
+  journal={IEEE Internet of Things Journal},
   year={2020},
-  note={\textit{(forthcoming)}}
+  publisher={IEEE}
 }
