--- a/cv.tex
+++ b/cv.tex
@@ -46,11 +46,11 @@
 
 \section*{\centering\underline{EDUCATION}}
 \begin{itemize}[noitemsep, nolistsep]
-    \large \item[2020] \textbf{University of Liverpool} \hfill Suzhou, China
+    \large \item[2020] \textbf{University of Liverpool} \hfill Liverpool, UK
         \begin{itemize}[noitemsep, nolistsep]
             \item[] \textit{Bachelor of Science in Information and Computing Sciences}
         \end{itemize} 
-    \item[2020] \large\textbf{Xi'an Jiaotong-Liverpool University} \hfill Liverpool, UK
+    \item[2020] \large\textbf{Xi'an Jiaotong-Liverpool University} \hfill Suzhou, China
         \begin{itemize}[noitemsep, nolistsep]
             \item[] \textit{Bachelor of Science in Information and Computing Sciences}
         \end{itemize} 
