update my education

--- a/cv.tex
+++ b/cv.tex
@@ -46,13 +46,13 @@
 
 \section*{\centering\underline{EDUCATION}}
 \begin{itemize}[noitemsep, nolistsep]
-    \large \item[2020] \textbf{University of Liverpool} \hfill Liverpool, UK
+    % \large \item[2020] \textbf{University of Liverpool} \hfill Liverpool, UK
+    %     \begin{itemize}[noitemsep, nolistsep]
+    %         \item[] \textit{BSc (Hons) Information and Computing Sciences (2:1)}
+    %     \end{itemize} 
+    \item[2020] \large\textbf{Xi'an Jiaotong-Liverpool University \& University of Liverpool} \hfill Suzhou, China
         \begin{itemize}[noitemsep, nolistsep]
-            \item[] \textit{Bachelor of Science in Information and Computing Sciences}
-        \end{itemize} 
-    \item[2020] \large\textbf{Xi'an Jiaotong-Liverpool University} \hfill Suzhou, China
-        \begin{itemize}[noitemsep, nolistsep]
-            \item[] \textit{Bachelor of Science in Information and Computing Sciences}
+            \item[] \textit{BSc (Hons) Information and Computing Sciences (2:1)}
         \end{itemize} 
 \end{itemize}
 
