--- a/cv.tex
+++ b/cv.tex
@@ -38,7 +38,7 @@
 \begin{minipage}[t]{0.45\textwidth}
     {\small\raggedright
     Email: \href{mailto:dixingxu@gmail.com}{dixingxu@gmail.com} \\
-    Web: \href{https://resume.dex.moe}{https://resume.dex.moe} \\
+    Web: \href{https://blog.dex.moe}{https://blog.dex.moe} \\
     (Last update: \today)
     }
 \end{minipage}
@@ -60,6 +60,14 @@
 \subsection*{\centering{Academia}}
 \begin{itemize}[leftmargin=0em, noitemsep, nolistsep]
     \setlength\itemsep{1em}
+    \item[] \large\textbf{Hong Kong Baptist University} \hfill Hong Kong SAR
+        \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
+            \item[] {Research Assistant} \hfill 2020.10-PRESENT
+             \begin{itemize}
+                \small
+                \item[--] Worked with \href{https://www.comp.hkbu.edu.hk/~chxw/}{Prof. Xiaowen Chu} on distributed machine learning systems and blockchain systems.
+             \end{itemize}
+        \end{itemize} 
     \item[] \large\textbf{Zhejiang University} \hfill Hangzhou, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
             \item[] {Visiting Student Researcher} \hfill 2019.09-2020.03
@@ -118,12 +126,17 @@
 
     \item[] \large\textbf{Hyperledger} \hfill Remote
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] Mentor \hfill 2020.03-Present
+            \item[] Mentor \hfill 2021.03-2021.11
+            \begin{itemize}
+                \small
+                \item[--] Mentor for \textit{Support Decentralized Governance for Smart Contracts in Fabric Python SDK} \href{https://wiki.hyperledger.org/display/INTERN/Support+Decentralized+Governance+for+Smart+Contracts+in+Fabric+Python+SDK}{\textcolor{blue}{[Project]}}
+            \end{itemize}
+            \item[] Mentor \hfill 2020.03-2020.11
             \begin{itemize}
                 \small
                 \item[--] Mentor for \textit{Add interactive examples to Fabric Python SDK} \href{https://wiki.hyperledger.org/pages/viewpage.action?pageId=29035315}{\textcolor{blue}{[Project]}}
             \end{itemize}
-            \item[] Software Maintainer\hfill 2018.09-Present
+            \item[] Software Maintainer\hfill 2018.09-PRESENT
              \begin{itemize}
                 \small
                 \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
