--- a/cv.tex
+++ b/cv.tex
@@ -60,9 +60,9 @@
 \subsection*{\centering{Academia}}
 \begin{itemize}[leftmargin=0em, noitemsep, nolistsep]
     \setlength\itemsep{1em}
-    \item[] \large\textbf{Hong Kong Baptist University} \hfill Hong Kong SAR
+    \item[] \large\textbf{Hong Kong Baptist University} \hfill Hong Kong
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] {Research Assistant} \hfill 2020.10-PRESENT
+            \item[] {Research Assistant} \hfill 2020.10-2021.11
              \begin{itemize}
                 \small
                 \item[--] Worked with \href{https://www.comp.hkbu.edu.hk/~chxw/}{Prof. Xiaowen Chu} on distributed machine learning systems and blockchain systems.
@@ -109,6 +109,14 @@
 \subsection*{\centering{Industry}}
 \begin{itemize}[leftmargin=0em, noitemsep, nolistsep]
     \setlength\itemsep{1em}
+    \item[] \large\textbf{Hex Trust} \hfill Remote/Hong Kong
+    \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
+        \item[] {Developer} \hfill 2022.04-PRESENT
+         \begin{itemize}
+            \small
+            \item[--] HTM(Markets) Backend Development (Rust)
+         \end{itemize}
+    \end{itemize}
     \item[] \large\textbf{The Linux Foundation} \hfill Remote
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
             \item[] Software Development Engineer (Blockchain) Internship\hfill 2020.06-2020.12
